<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_mainn"
        android:orderInCategory="1"
        android:title="@string/menu_main"
        android:icon="@drawable/ic_action_flower"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_libr_"
        android:title="@string/menu_library"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_books"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_remind"
        android:title="@string/menu_reminder"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_alarm_bell"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_vazonlist"
        android:title="@string/menu_list"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_forums"
        android:title="@string/menu_forum"
        android:orderInCategory="4"
        android:icon="@drawable/ic_action_contract"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_calendar"
        android:title="@string/menu_calendar"
        android:orderInCategory="5"
        android:icon="@drawable/ic_action_calendar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_user"
        android:title="@string/menu_user"
        android:orderInCategory="6"
        android:icon="@drawable/ic_action_calendar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_sett"
        android:title="@string/menu_settings"
        android:orderInCategory="7"
        android:icon="@drawable/ic_action_gear"
        app:showAsAction="withText"/>
</menu>