<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#53AD61">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/kalendar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_style"
            android:drawableLeft="@drawable/ic_action_calendar"
            android:gravity="center_vertical"
            android:hapticFeedbackEnabled="false"
            android:paddingLeft="10dp"
            android:text="@string/calender"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/active_reminder"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_style"
            android:drawableLeft="@drawable/ic_action_alarm_bell"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/active_reminder"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="480dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/change_reminder"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button_style"

            android:gravity="center_vertical"
            android:hapticFeedbackEnabled="false"
            android:paddingLeft="10dp"
            android:text="@string/change_reminder"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/turnon_off"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_dark_style"
            android:text="@string/turner"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>